# PHex-CPP

./: .gitignore  .gitmodules  CMakeLists.txt
Dualizer/: CMakeLists.txt  main.cpp
MeshCutter/: CMakeLists.txt  main.cpp
Mesher/: CMakeLists.txt  Definitions.h  Mesh.cpp  Mesh.h  main.cpp
Parameterization/: CMakeLists.txt
Parametrization/: CMakeLists.txt  branched_gradient.h  main.cpp  parameterize.h
Planarize/: CMakeLists.txt  CeresPlanarize.h  common.h  main.cpp
common/: setup_parameterization.h
